--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,4 @@
+/Plansza$1TimeListener.class
+/Plansza$2.class
 /Plansza$3.class
 /Plansza$4.class
-/Plansza$1TimeListener.class
-/KoniecGry.class
-/KoniecGry$1.class
